src/objects/Glxy_ProjectAgencyTransaction__c.object
<CustomObject>
    <description>This table contains the Lease Project Agency information for Pre-certification and Final Certification process. This information will be used during these 2 transaction processes only.</description>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>PBS_AB_Code__r.Agency_Bureau_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseStructuredParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseSurfaceParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IASquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Sq Ft</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOA_RSF__c</fullName>
        <formula>IF( Total_RSF__c =0,0,Total_RSF__c - IASquareFeet__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOA Sq Ft</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_ASA__c</fullName>
        <label>Resulting ASA</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NullRSFReleasedInd__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>Indicates whether the Federal RSF Released value for a Request ASA was null when the Request ASA was added to Galaxy as part of a transaction. This is used to determine if the ASA should be returned to REXUS later when the transaction is approved.</description>
        <label>Null RSF Released Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_ASA__c</fullName>
        <label>Existing ASA</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBS_ABCode__c</fullName>
        <formula>PBS_AB_Code__r.AB_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBS_AB_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used by cast iron to set the relationship</description>
        <label>PBS AB Code</label>
        <referenceTo>PBS_AB_Code__c</referenceTo>
        <relationshipLabel>Project Agencies Transactions</relationshipLabel>
        <relationshipName>Project_Agencies_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectAgencyID__c</fullName>
        <externalId>true</externalId>
        <label>Project Agency Transaction ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedReqID__c</fullName>
        <label>ProposedReqID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSF_Released__c</fullName>
        <label>RSF Released</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestASAID__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Request ASA ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestID__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Request ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Parking_Spaces__c</fullName>
        <formula>BaseStructuredParkingSpaces__c +  BaseSurfaceParkingSpaces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Parking Spaces</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_RSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Sq Ft</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <label>Transaction ID</label>
        <referenceTo>Glxy_Transaction__c</referenceTo>
        <relationshipLabel>Project Agencies Transactions</relationshipLabel>
        <relationshipName>Project_Agencies_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF( ISBLANK(   PBS_AB_Code__c  ),&quot;No Client SQFT Info&quot;,&quot;Client  SQFT Info&quot;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Project Agency Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAT-{000000}</displayFormat>
        <label>Project Agency Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Agencies Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IA_RSF_not_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>IASquareFeet__c  &lt; 0</errorConditionFormula>
        <errorMessage>IA Square Feet cannot be a Negative Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IA_RSF_not_greater_than_New_RSF</fullName>
        <active>true</active>
        <errorConditionFormula>IASquareFeet__c  &gt;  Total_RSF__c</errorConditionFormula>
        <errorMessage>IA  Square Feet cannot be greater than New Square Feet</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Released_RSF_Not_Change_on_NULL</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(RSF_Released__c),ISNULL(PRIORVALUE(RSF_Released__c)), $User.Alias &lt;&gt; &quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>RSF Released Cannot Be changed when NULL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_RSF_Released_Not_Negative</fullName>
        <active>true</active>
        <description>Checks that value in RSF Released is less than zero.</description>
        <errorConditionFormula>AND(ISCHANGED(RSF_Released__c),RSF_Released__c&lt;0 ,$User.Alias &lt;&gt;&quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>Value for RSF Released cannot be Negative.</errorMessage>
    </validationRules>
</CustomObject>